padding and spacing fixed in Moile  view of recipe page

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1244,7 +1244,7 @@ header .nav a {
     font-size: 18px;
   }
 
- /* chef  */
+  /* chef  */
   #main-chef {
     padding: 20px 2em;
   }
@@ -1892,6 +1892,10 @@ header .nav a {
 }
 
 @media screen and (max-width: 480px) {
+  /* Recipe  */
+  #recipe {
+    padding: 2em 20px;
+  }
   #recipe .recipe-heading .left h2 {
     letter-spacing: -0.06rem;
   }
@@ -1907,6 +1911,8 @@ header .nav a {
   #recipe .video-container {
     gap: 1.5em;
   }
+
+  /* Recipe Ingredients  */
   #recipe-ing .o-recipe h3,
   .o-recipe h3 {
     margin-bottom: 0.6em;
@@ -1914,6 +1920,7 @@ header .nav a {
   #recipe-ing .o-recipe,
   .o-recipe {
     grid-template-rows: none;
+    gap: 0.5em;
   }
   #recipe-ing .o-recipe .o-recipe-card,
   .o-recipe .o-recipe-card {
@@ -1940,10 +1947,12 @@ header .nav a {
     height: 4.3em;
   }
   #recipe-ing {
-    padding: 0em 2em;
+    padding: 2em 20px;
   }
+
+  /* sauce  */
   #sauce {
-    padding: 1em 2em;
+    padding: 2em 20px;
   }
   #sauce .right-img {
     width: 100%;
@@ -1953,15 +1962,17 @@ header .nav a {
     height: 100%;
     object-fit: cover;
   }
+
+  /* direction  */
   #direction {
-    padding: 2em;
+    padding: 2em 20px;
   }
   #direction .dir-block {
     gap: 1.4em;
-    padding: 2em 0em 2em 1em;
+    padding: 2em 0em 2em 2em;
   }
   #direction .dir-block .block .container .checkmark {
-    left: -40px;
+    left: -31px;
     height: 20px;
     width: 20px;
   }
